--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,29 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="content-box">
+        <div class="image-box">
+            <img src="@Url.Content("~/images/Logo.png.png")" alt="Betting Image" />
+        </div>
+
+        <div class="text-box">
+            <h2>The betting website is a home to all gamblers who want to quit gambling!</h2>
+        </div>
+    </div>
+
+    <div class="matches">
+        <h3>Upcoming matches</h3>
+        <div class="match-card">
+            <p>@ViewBag.UpcomingMatch</p>
+        </div>
+    </div>
+
+    <div class="auth-links">
+        <p>
+            Want to use our services
+            <a href="/User/Login">login</a> or
+            <a href="/User/Register" class="register">register</a>
+        </p>
+    </div>
 </div>
