--- a/Views/User/Register.cshtml
+++ b/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model FootballBettingWebApp.Models.User
+﻿@model BLL.DTOs.UserDTO
 @{
     ViewData["Title"] = "Register";
 }
@@ -6,13 +6,22 @@
 <div class="auth-container">
     <h2>Register</h2>
 
+    <!-- Display error message if any -->
+    @if (ViewBag.Error != null)
+    {
+        <p style="color:red; margin-bottom:10px;">@ViewBag.Error</p>
+    }
+
     <form asp-action="Register" method="post">
         <input asp-for="Username" placeholder="Name" required />
-        <input asp-for="PasswordHash" type="password" placeholder="Password" required />
+        <input asp-for="Password" type="password" placeholder="Password" required />
         <input asp-for="Age" type="number" placeholder="Age +18" min="18" required />
+        <input asp-for="Email" type="email" placeholder="Email" required />
+
 
         <button type="submit">Register</button>
     </form>
+
 
     <p>Already have an acc? <a href="/User/Login">Login</a></p>
 </div>
